tests/specs/ecosystem/rdtlabs/ts_utils/0_2_21.test
rdtlabs/ts-utils/0.2.21
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
  public get cause(): ErrorLike {
             ~~~~~
    at file://<tmpdir>/src/cancellation/CancellationError.ts:11:14

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static of<T>(...array: readonly T[]): List<T> {
         ~~
    at file://<tmpdir>/src/common/List.ts:49:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static from<T>(arrayLike: ArrayLike<T>): List<T>;
         ~~~~
    at file://<tmpdir>/src/common/List.ts:56:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static from<
         ~~~~
    at file://<tmpdir>/src/common/List.ts:63:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static from<T>(...param0: any): any {
         ~~~~
    at file://<tmpdir>/src/common/List.ts:67:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static fromAsync<T>(iterableOrArrayLike: AsyncIterable<T> | Iterable<T | Promise<T>> | ArrayLike<T | Promise<T>>): Promise<List<T>>;
         ~~~~~~~~~
    at file://<tmpdir>/src/common/List.ts:70:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static fromAsync<
         ~~~~~~~~~
    at file://<tmpdir>/src/common/List.ts:71:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  static fromAsync<T>(...param0: any): any {
         ~~~~~~~~~
    at file://<tmpdir>/src/common/List.ts:75:10

Found 8 errors.

error: Type checking failed.

